--- a/src/App.css
+++ b/src/App.css
@@ -184,7 +184,7 @@
 
 .custom-modal-header {
   display: flex;
-  justify-content: space-between;
+  justify-content: flex-end;
   align-items: center;
   border-bottom: 1px solid #444;
   padding-bottom: 0.5rem;
